--- a/jp/stuff/curiosities.html
+++ b/jp/stuff/curiosities.html
@@ -17,9 +17,8 @@
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
     <link rel="stylesheet" href="./../../assets/style/css/style.css">
-    <script type="text/javascript"
-        src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?skin=cookielaw3&amp;msg=%E5%BD%93%E3%82%B5%E3%82%A4%E3%83%88%E3%81%AF%E3%80%81%E3%81%8A%E5%AE%A2%E6%A7%98%E3%81%AB%E3%82%88%E3%82%8A%E8%89%AF%E3%81%84%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%82%92%E6%8F%90%E4%BE%9B%E3%81%99%E3%82%8B%E3%81%9F%E3%82%81%E3%80%81Cookie%E3%82%92%E4%BD%BF%E7%94%A8%E3%81%97%E3%81%A6%E3%81%84%E3%81%BE%E3%81%99%E3%80%82%E3%81%93%E3%82%8C%E3%81%AB%E3%81%AF%E3%80%81%E3%83%A6%E3%83%BC%E3%82%B6%E3%83%BC%E3%81%AB%E5%90%88%E3%82%8F%E3%81%9B%E3%81%9F%E3%82%B3%E3%83%B3%E3%83%86%E3%83%B3%E3%83%84%E3%81%A8%E5%BA%83%E5%91%8A%E3%81%8C%E5%90%AB%E3%81%BE%E3%82%8C%E3%81%BE%E3%81%99%E3%80%82%20%E8%A9%B3%E7%B4%B0%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6%E3%81%AF%E3%80%81%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%5D%E3%81%93%E3%81%93%E3%82%92%E3%82%AF%E3%83%AA%E3%83%83%E3%82%AF%5B%2Furl%5D.%20%E3%81%97%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84%E3%80%82%E5%BD%93%E3%82%B5%E3%82%A4%E3%83%88%E3%82%92%E5%BC%95%E3%81%8D%E7%B6%9A%E3%81%8D%E3%81%94%E5%88%A9%E7%94%A8%E3%81%84%E3%81%9F%E3%81%A0%E3%81%8F%E9%9A%9B%E3%81%AF%E3%80%81Cookie%E3%81%AE%E4%BD%BF%E7%94%A8%E3%80%81%E6%94%B9%E8%A8%82%E3%81%95%E3%82%8C%E3%81%9F%E3%83%97%E3%83%A9%E3%82%A4%E3%83%90%E3%82%B7%E3%83%BC%E3%83%9D%E3%83%AA%E3%82%B7%E3%83%BC%E3%81%8A%E3%82%88%E3%81%B3%E5%88%A9%E7%94%A8%E8%A6%8F%E7%B4%84%E3%81%AB%E5%90%8C%E6%84%8F%E3%81%84%E3%81%9F%E3%81%A0%E3%81%84%E3%81%9F%E3%82%82%E3%81%AE%E3%81%A8%E3%81%BF%E3%81%AA%E3%81%97%E3%81%BE%E3%81%99%E3%80%82&amp;learnmore=Cookie%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6%E8%A9%B3%E3%81%97%E3%81%8F%E3%81%AF%E3%81%93%E3%81%A1%E3%82%89&amp;morelink=https%3A%2F%2Fsupport.google.com%2Faccounts%2Fanswer%2F61416%3Fco%3DGENIE.Platform%253DDesktop%26hl%3Dja"></script>
-    <script data-ad-client="ca-pub-5704095251892500" preload
+      <script defer type="text/javascript" src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?msg=%E5%BD%93%E3%82%B5%E3%82%A4%E3%83%88%E3%81%AF%E3%80%81%E3%81%8A%E5%AE%A2%E6%A7%98%E3%81%AB%E3%82%88%E3%82%8A%E8%89%AF%E3%81%84%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%82%92%E6%8F%90%E4%BE%9B%E3%81%99%E3%82%8B%E3%81%9F%E3%82%81%E3%80%81Cookie%E3%82%92%E4%BD%BF%E7%94%A8%E3%81%97%E3%81%A6%E3%81%84%E3%81%BE%E3%81%99%E3%80%82%E3%81%93%E3%82%8C%E3%81%AB%E3%81%AF%E3%80%81%E3%83%A6%E3%83%BC%E3%82%B6%E3%83%BC%E3%81%AB%E5%90%88%E3%82%8F%E3%81%9B%E3%81%9F%E3%82%B3%E3%83%B3%E3%83%86%E3%83%B3%E3%83%84%E3%81%A8%E5%BA%83%E5%91%8A%E3%81%8C%E5%90%AB%E3%81%BE%E3%82%8C%E3%81%BE%E3%81%99%E3%80%82%20%E8%A9%B3%E7%B4%B0%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6%E3%81%AF%E3%80%81%20%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%23japanese%5D%E3%81%93%E3%81%93%E3%82%92%E3%82%AF%E3%83%AA%E3%83%83%E3%82%AF%20%E3%81%97%E3%81%A6%E3%81%8F%E3%81%A0%E3%81%95%E3%81%84%5B%2Furl%5D.%20%E3%80%82%E5%BD%93%E3%82%B5%E3%82%A4%E3%83%88%E3%82%92%E5%BC%95%E3%81%8D%E7%B6%9A%E3%81%8D%E3%81%94%E5%88%A9%E7%94%A8%E3%81%84%E3%81%9F%E3%81%A0%E3%81%8F%E9%9A%9B%E3%81%AF%E3%80%81Cookie%E3%81%AE%E4%BD%BF%E7%94%A8%E3%80%81%E6%94%B9%E8%A8%82%E3%81%95%E3%82%8C%E3%81%9F%E3%83%97%E3%83%A9%E3%82%A4%E3%83%90%E3%82%B7%E3%83%BC%E3%83%9D%E3%83%AA%E3%82%B7%E3%83%BC%E3%81%8A%E3%82%88%E3%81%B3%E5%88%A9%E7%94%A8%E8%A6%8F%E7%B4%84%E3%81%AB%E5%90%8C%E6%84%8F%E3%81%84%E3%81%9F%E3%81%A0%E3%81%84%E3%81%9F%E3%82%82%E3%81%AE%E3%81%A8%E3%81%BF%E3%81%AA%E3%81%97%E3%81%BE%E3%81%99%E3%80%82Cookie%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6%E8%A9%B3%E3%81%97%E3%81%8F%E3%81%AF&amp;learnmore=%E3%81%93%E3%81%A1%E3%82%89&amp;morelink=https%3A%2F%2Fsupport.google.com%2Faccounts%2Fanswer%2F61416%3Fco%3DGENIE.Platform%253DDesktop%26hl%3Dja&amp;accept_text=%E5%88%86%E3%81%8B%E3%82%8A%E3%81%BE%E3%81%97%E3%81%9F&amp;accept_radius=0"></script>
+    <script data-ad-client="ca-pub-5704095251892500" defer
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Welcome to SARO - ポーランドの面白さ</title>
 </head>
@@ -28,11 +27,11 @@
     <header>
         <a href="index.html" class="header-brand">SARO</a>
         <nav>
-            <div class="hamburger">
+            <button class="hamburger" aria-expanded="false">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
-            </div>
+            </button>
             <ul class="nav__desktop">
                 <li><a class="nav" href="./../index.html">ホーム</a></li>
                 <li><a class="nav" href="./../lessons.html">レッスン</a></li>
