--- a/stuff/dialogue.html
+++ b/stuff/dialogue.html
@@ -2,16 +2,7 @@
 <html lang="en">
 
 <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175962314-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() { dataLayer.push(arguments); }
-            gtag('js', new Date());
-    
-            gtag('config', 'UA-175962314-1');
-        </script>
-        <script data-ad-client="ca-pub-5704095251892500" preload src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-5704095251892500" defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="UTF-8">
     <meta name="description"
         content="We are SARO. We offer free Polish lessons! This project was created as a result of a desire to help people, teaching the Polish language and share our culture and curiosities">
@@ -27,7 +18,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-    <script src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?skin=cookielaw3&amp;animation=shake&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20To%20learn%20more%2C%20%5Burl%3Dhttps%3A%2Fsaro.website%2Flearnmore%5Dclick%20here%5B%2Furl%5D.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%2C%20revised%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%5D%20Privacy%20Policy%20and%20Terms%20of%20Use%5B%2Furl%5D.%20Our%20website%20is%20free%20of%20charged%20so%20why%20we%20need%20to%20add%20some%20ads%20to%20keep%20our%20domain%20and%20hosting.&amp;learnmore=Learn%20more%20about%20cookies&amp;morelink=https%3A%2F%2Fpolicies.google.com%2Ftechnologies%2Fcookies%3Fhl%3Den-US"></script>
+    <script defer src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?skin=cookielaw3&amp;animation=shake&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20To%20learn%20more%2C%20%5Burl%3Dhttps%3A%2Fsaro.website%2Flearnmore%5Dclick%20here%5B%2Furl%5D.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%2C%20revised%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%5D%20Privacy%20Policy%20and%20Terms%20of%20Use%5B%2Furl%5D.%20Our%20website%20is%20free%20of%20charged%20so%20why%20we%20need%20to%20add%20some%20ads%20to%20keep%20our%20domain%20and%20hosting.&amp;learnmore=Learn%20more%20about%20cookies&amp;morelink=https%3A%2F%2Fpolicies.google.com%2Ftechnologies%2Fcookies%3Fhl%3Den-US"></script>
     <title>Welcome to SARO - Dialogue</title>
     <link
         href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -39,11 +30,11 @@
     <header>
         <a href="https://saro.website" class="header-brand">SARO</a>
         <nav>
-            <div class="hamburger">
+            <button class="hamburger" aria-expanded="false">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
-            </div>
+            </button>
             <ul class="nav__desktop">
                 <li><a class="nav" href="./../index.html">Home</a></li>
                 <li><a class="nav" href="./../lessons.html">Lessons</a></li>
