--- a/about.html
+++ b/about.html
@@ -67,10 +67,9 @@
                             we are SARO.</p>
                         <p>The project was created as a result of a desire to help people studying the Polish language.
                             The main
-                            language is English but we also add languages like Japanese and Korean as well.
-                            SARO has created from the word taken from the name “Saki” in Japanese 沙季 and from name
-                            Robert.
-                            Saki and Robert are Polish and Japanese couple trying to share with others their knowledge.
+                            language of our site is English but we added languages like Japanese and Korean as well. We hope to add more languages in the future.
+                            SARO was created from combining the name “Saki” in Japanese 沙季 and the name Robert.
+                            Saki and Robert are Polish-Japanese couple trying to share their knowledge with others.
                         </p>
                         </div>
                         <h3>Owners</h3>
@@ -104,6 +103,21 @@
                                             cultural differences. <br>
                                             She works as a LOT agent, she loves Polish people and Polish culture
                                         </p>
+                                        <button class="button__black">Contact</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                         <h3>Web dev</h3>
+                        <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <img src="./assets/img/saro/team7.jpg" alt="Anna" style="width:100%">
+                                    <div class="container__card">
+                                        <h2>Anna</h2>
+                                        <p class="title">Teacher/Front-end support</p>
+                                        <p>Aspiring front-end developer, a spark of joy and crazy plant lady.  <br> Enthusiastically explaining Polish customs, superstitions and weird sayings. Enjoys yoga, house decorating and online shopping. Speaks English and Japanese.
+                                           </p>
                                         <button class="button__black">Contact</button>
                                     </div>
                                 </div>
@@ -186,7 +200,7 @@
                         <div class="footer-about">
                             <p>If you want to support us please visit our page <a href="support_us.html">SUPPORT US</a>
                             </p>
-                            <p>It will help us to make it longer and motivate us that we do right thing!</p>
+                            <p>It will help to keep us motivated and assure us that we are doing the right thing!</p>
                             <div class="reportButton">
                                 <button class="report" onclick="report()">report</button>
                             </div>
