--- a/jp/stuff/traditions.html
+++ b/jp/stuff/traditions.html
@@ -72,9 +72,9 @@
                             <br>
                             これは、ポーランドの美しいイベントの1つです。
                             この文化は永遠に続きます。ワルシャワ蜂起（ワルシャワほうき、ポーランド語：Powstanie
-                            Warszawskie）は、第二次世界大戦後期、ナチス・ドイツ占領下のポーランドの首都ワルシャワで起こった武装蜂起である。<span id="dots">(...)</span>
+                            Warszawskie）は、第二次世界大戦後期、ナチス・ドイツ占領下のポーランドの首都ワルシャワで起こった武装蜂起である。<span class="dots">(...)</span>
                         </p>
-                        <div id="more">
+                        <div class="more">
                             <p>
                                 <img src="././../../assets/img/articles/traditions/08.01.2020/powstanieWarszawskie3.jpg"
                                     alt="Warsaw Uprising" class="image-right__center">
@@ -142,7 +142,7 @@
                                         target="_blank">wyborcza.pl</a></i>
                             </div>
                         </div>
-                        <button onclick="myFunctionJapanese()" id="myBtn" class="button__default">さらに読む</button>
+                        <button class="button__default">さらに読む</button>
                     </div>
                     <div class="reportButton">
                         <button class="report" onclick="report()">レポート</button>
