--- a/stuff/beauty.html
+++ b/stuff/beauty.html
@@ -89,10 +89,10 @@
                                 tips
                                 and favorite cosmetics of Polish women with you.
                                 There are many drugstores in Poland where you can buy a variety of products. Let's look
-                                at some of the most popular brands:</p><span id="dots">(.....)</span>
+                                at some of the most popular brands:</p><span class="dots">(.....)</span>
 
                         </div>
-                        <div id="more">
+                        <div class="more">
                             <p>
                                 <img src="./../assets/img/articles/beauty/12.08.2020/2.png"
                                     alt="Miya and Tołpa Polish cosmetics" class="myImg image-right__center">
@@ -140,7 +140,7 @@
                             <img src="./../assets/img/articles/beauty/12.08.2020/4.png" alt="BIO Cosmetics"
                                 class="myImg image-center__center">
                         </div>
-                        <button onclick="myFunction()" id="myBtn" class="button__default">Read more</button>
+                        <button class="button__default">Read more</button>
                     </div>
                     <div class="reportButton">
                         <button class="report" onclick="report()">report</button>
