--- a/stuff/curiosities.html
+++ b/stuff/curiosities.html
@@ -85,8 +85,8 @@
                             * Then you can add a little milk to whiten, olive oil and salt <br>
                             * Finally, pour in the flour - half a kilo is the minimum until a sticky mass is formed.
                             To make the dough more fluffy, let the mass rise for a few hours. <br>
-                            <span id="dots">...</span></p>
-                        <div id="more">
+                            <span class="dots">...</span></p>
+                        <div class="more">
                             <img src="./../assets/img/articles/curiosities/01.08.2020/finalPizza.jpg"
                                 alt="Pizza with Ketchup" class='myImg image-left__center'>
                             <p>On the baking tray, when you will put the dough, you can put a layer of tomato sauce and
@@ -120,7 +120,7 @@
                                     <a href="../about.html" target="_blank">@Justyna & Robert</a>
                             </div>
                         </div>
-                        <button onclick="myFunction()" id="myBtn" class="button__default">Read more</button>
+                        <button class="button__default">Read more</button>
                     </div>
                     <div class="reportButton">
                         <button class="report" onclick="report()">report</button>
