--- a/stuff/dialogue.html
+++ b/stuff/dialogue.html
@@ -4,10 +4,8 @@
 <head>
     <script data-ad-client="ca-pub-5704095251892500" defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="We are SARO. We offer free Polish lessons! This project was created as a result of a desire to help people, teaching the Polish language and share our culture and curiosities">
-    <meta name="keywords"
-        content="free Polish lessons, polish lessons, Polska, polskie lekcje, lekcje języka polskiego, przepisy, recipes, recipe, polish foods recipe, recipes of Polish foods, żurek, naleśniki, gołąbki, żurek recipe, naleśniki recipe, gołąbki recipe, Polish cabbage rolls recipe, Polish free lessons, how to learn Polish, where to learn Polish, przypadki, polish declensions, how to make Polish words, how to make Polish sentences, SARO, SARO Polish lessons for free, SARO Polish, saro Polish lessons, Polish, Poland, Polska, polski, język polski, Polish hangman, saro, course, online, courses, english, japanese, Polish, Polish lessons, Polish curiosities, Polish tradition, Saro Polish langauge lessons online, Polish grammar, Polish media, Polish movies, Polish music, Polish foods, Polish food, pierogi, naleśniki, the best website for studying Polish, Polish lessons, Polish dictionary, Saro, Sa, Ro, Saki, Robert, Polish pronunciation, how to speak Polish, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, Polish cases, przypadki, Polish ortography, Polish culture, Polish traditions">
+    <meta name="description" content="We are SARO. We offer free Polish lessons! This project was created as a result of a desire to help people, teaching the Polish language and share our culture and curiosities">
+    <meta name="keywords" content="free Polish lessons, polish lessons, Polska, polskie lekcje, lekcje języka polskiego, przepisy, recipes, recipe, polish foods recipe, recipes of Polish foods, żurek, naleśniki, gołąbki, żurek recipe, naleśniki recipe, gołąbki recipe, Polish cabbage rolls recipe, Polish free lessons, how to learn Polish, where to learn Polish, przypadki, polish declensions, how to make Polish words, how to make Polish sentences, SARO, SARO Polish lessons for free, SARO Polish, saro Polish lessons, Polish, Poland, Polska, polski, język polski, Polish hangman, saro, course, online, courses, english, japanese, Polish, Polish lessons, Polish curiosities, Polish tradition, Saro Polish langauge lessons online, Polish grammar, Polish media, Polish movies, Polish music, Polish foods, Polish food, pierogi, naleśniki, the best website for studying Polish, Polish lessons, Polish dictionary, Saro, Sa, Ro, Saki, Robert, Polish pronunciation, how to speak Polish, Warszawa, Warsaw, Wrocław, Wroclaw, Gdańsk, Polish cases, przypadki, Polish ortography, Polish culture, Polish traditions">
     <meta name="author" content="Robert Michalski">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Saro.Website with free Polish lessons" />
@@ -20,9 +18,7 @@
     <meta property="og:image:height" content="1024">
     <script defer src="//www.3dcart.com/lp/cookie-law-generator/cookie.js?skin=cookielaw3&amp;animation=shake&amp;msg=We%20use%20cookies%20to%20understand%20how%20you%20use%20our%20site%20and%20to%20improve%20your%20experience.%20This%20includes%20personalizing%20content%20and%20advertising.%20To%20learn%20more%2C%20%5Burl%3Dhttps%3A%2Fsaro.website%2Flearnmore%5Dclick%20here%5B%2Furl%5D.%20By%20continuing%20to%20use%20our%20site%2C%20you%20accept%20our%20use%20of%20cookies%2C%20revised%5Burl%3Dhttps%3A%2F%2Fsaro.website%2Flearnmore%5D%20Privacy%20Policy%20and%20Terms%20of%20Use%5B%2Furl%5D.%20Our%20website%20is%20free%20of%20charged%20so%20why%20we%20need%20to%20add%20some%20ads%20to%20keep%20our%20domain%20and%20hosting.&amp;learnmore=Learn%20more%20about%20cookies&amp;morelink=https%3A%2F%2Fpolicies.google.com%2Ftechnologies%2Fcookies%3Fhl%3Den-US"></script>
     <title>Welcome to SARO - Dialogue</title>
-    <link
-        href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900|Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="../assets/style/css/style.css">
 </head>
 
@@ -63,10 +59,10 @@
             <div class="wrapper">
                 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Flex-ads -->
-                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5704095251892500"
-                    data-ad-slot="5179727844" data-ad-format="auto" data-full-width-responsive="true"></ins>
+                <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5704095251892500" data-ad-slot="5179727844" data-ad-format="auto" data-full-width-responsive="true"></ins>
                 <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
+
                 </script>
                 <h1>Dialogue</h1>
                 <article>
@@ -289,7 +285,127 @@
                             </p>
                             <div class="sign">
                                 <p class="sign--person">written by</p>
-                                    <a href="../about.html" target="_blank">@Justyna</a>
+                                <a href="../about.html" target="_blank">@Justyna</a>
+                            </div>
+
+                        </div>
+                        <button class="dialogue dialogue-grocery__shoping">Grocery shopping</button>
+                        <div class="panel">
+                            <h2>Grocery shopping</h2>
+                            <p>In this lesson we are taking you on a trip to a local grocery store. In a lot of smaller stores there’s no self-service and you have to convey what do you want to buy to the shopkeeper. There’s a dialogue, some vocabulary and a short exercise you should have no problem with after this lesson. Also you should recognize some vocabulary from the previous lessons. </p><br> <br>
+                            <div class="content--dial">
+                                <div class="content--dial--item">
+                                 <p>
+                                    Klient: Dzień dobry! <br>
+                                    Sprzedawca: Dzień dobry! Co podać? <br>
+                                    Klient: Proszę makaron penne i tuńczyka. <br>
+                                    Sprzedawca: Ile? <br>
+                                    Klient: Paczkę makaronu i dwie puszki tuńczyka.<br>
+                                    Sprzedawca: Proszę. I co jeszcze?<br>
+                                    Klient: Proszę jeszcze cebulę i śmietanę kremówkę.<br>
+                                    Sprzedawca: Proszę. To wszystko?<br>
+                                    Klient: Tak, dziękuję. Ile płacę?<br>
+                                    Sprzedawca: Czternaście siedemdziesiąt. Kartą czy gotówką?<br>
+                                    Klient: Zapłacę kartą.<br>
+                                    Sprzedawca: Czy drukować potwierdzenie?<br>
+                                    Klient: Nie, dziękuję. Do widzenia.<br>
+                                    Sprzedawca: Dziękuję. Do widzenia.<br>
+                                </p>
+                                </div>
+                                <div class="content--dial--item">
+                                    <p>klʲɛnt: d͡ʑɛɲ dɔbrɨ!<br>
+                                    spʂɛdaft͡sa: d͡ʑɛɲ dɔbrɨ! t͡sɔ pɔdat͡ɕ?<br>
+                                    klʲɛnt: prɔʂɛ̃w̃ makarɔn pɛnnɛ i tuɲʈ͡ʂɨka <br>
+                                    spʂɛdaft͡sa: ilɛ? <br>
+                                    klʲɛnt: paʈ͡ʂkɛ̃w̃ makarɔnu i dvʲɛ puʂkʲi tuɲʈ͡ʂɨka. <br>
+                                    spʂɛdaft͡sa: prɔʂɛ̃w̃. i t͡sɔ jɛʂʈ͡ʂɛ?<br>
+                                    klʲɛnt: prɔʂɛ̃w̃ jɛʂʈ͡ʂɛ t͡sɛbulɛ̃w̃ i ɕmʲɛtanɛ̃w̃ krɛmufkɛ̃w̃.<br>
+                                    spʂɛdaft͡sa: prɔʂɛ̃w̃. tɔ fʂɨstkɔ?<br>
+                                    klʲɛnt: tak, d͡ʑʲɛŋkujɛ̃w̃. ilɛ pwat͡sɛ̃w̃?<br>
+                                    spʂɛdaft͡sa: ʈ͡ʂtɛrnaɕt͡ɕɛ ɕɛdɛmd͡ʑɛɕɔnt. kartɔ̃w̃ ʈ͡ʂɨ gɔtufkɔ̃w̃?<br>
+                                    klʲɛnt: zapwat͡sɛ̃w̃ kartɔ̃w̃. <br>
+                                    spʂɛdaft͡sa: ʈ͡ʂɨ drukɔvat͡ɕ pɔtfʲɛrd͡zɛɲɛ?<br>
+                                    klʲɛnt: ɲɛ, d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
+                                    spʂɛdaft͡sa: d͡ʑʲɛŋkujɛ̃w̃. dɔ vʲid͡zɛɲa.<br>
+                                </p>
+                            </div>
+                            </div>
+                            <br>
+                            <p>
+                                Customer: Good morning! <br>
+Shopkeeper: Good morning! How can I help you? <br>
+Customer: I would like penne pasta and some tuna. <br>
+Shopkeeper: How many? <br>
+Customer: A pack of penne pasta and two cans of tuna.<br>
+Shopkeeper: Here you are. Anything else?<br>
+Customer: I would like an onion and heavy cream.<br>
+Shopkeeper: Here you are. Is that all?<br>
+Customer: Yes, thank you. How much is it?<br>
+Shopkeeper: Fourteen seventy. Would you like to pay with a card or cash?<br>
+Customer: I’ll pay the card.<br>
+Shopkeeper: Do you want a payment confirmation?<br>
+Customer: No, thank you. Good bye!<br>
+Shopkeeper: Goodbye!<br>
+<br>
+
+So from this dialogue you already have learned some new things:
+<br> <br>
+
+forma płatności (fɔrma pwatnɔɕt͡ɕi) - payment method :
+gotówka - cash  <br>
+zapłacę gotówką - I’ll pay cash  <br>
+karta - card <br>
+zapłacę kartą - I’ll pay the card <br>
+<br>
+artykuły spożywcze (artɨkuwɨ spɔʐɨfʈ͡ʂɛ) - groceries: <br>
+makaron - pasta <br>
+tuńczyk - tuna <br>
+śmietana - cream <br>
+śmietanka kremówka - heavy cream <br>
+cebula - onion <br>
+<br>
+<br>
+And now you are fully equipped for making an easy and quick canned tuna pasta! But let’s talk about one more important thing - containers and quantities.  <br>
+
+<img src="./../assets/img/articles/dialogues/pojemniki.png" alt="Types of containers">
+<br>
+And here we have countables and uncountables: <br>
+<img src="./../assets/img/articles/dialogues/policzalneiniepoliczalne.png" alt="Countable and uncountable foods">
+<br>
+<br>
+Now let's learn some helpful vocabulary: <br>
+grejpfrut (grɛjpfrut) - grapefruit <br>
+ciastka (t͡ɕastka) - cookies <br>
+jogurt (jɔgurt) - yoghurt <br>
+papryka (paprɨka) - bell pepper <br>
+pomidor (pɔmʲidɔr) - tomatoe <br>
+filet z kurczaka (fʲilɛt s kurʈ͡ʂaka) - chicken fillet <br>
+pierś z kurczaka (pʲɛrɕ s kurʈ͡ʂaka) - chicken breast <br>
+szynka (ʂɨnka) - ham <br>
+kiełbasa (kʲɛwbasa) - sausage <br>
+ser(sɛr) - cheese <br>
+sok (sɔk) - juice <br>
+woda gazowana (vɔda gazɔvana) - sparkling water <br>
+woda niegazowana (vɔda ɲɛgazɔvana) -  flat water <br>
+lody (lɔdɨ) - ice cream <br>
+mleko (mlɛkɔ) - milk <br>
+mleczko kokosowe (mlɛʈ͡ʂkɔ kɔkɔsɔvɛ) - coconut milk <br>
+płatki śniadaniowe (pwatkʲi ɕɲadaɲɔvɛ) - cereal <br>
+płatki owsiane (pwatkʲi ɔfɕanɛ) - oatflakes <br>
+orzechy włoskie (ɔʐɛxɨ vwɔskʲɛ) - wallnuts <br>
+mrożone brokuły (mrɔʐɔnɛ brɔkuwɨ) - frozen broccoli <br>
+chusteczki higieniczne (xustɛʈ͡ʂkʲi hʲigʲɛɲiʈ͡ʂnɛ) - tissues <br>
+papier toaletowy (papʲɛr tɔalɛtɔvɨ) - toilet paper <br>
+boczek (bɔʈ͡ʂɛk) - bacon <br>
+winogrona (vʲinɔgrɔna) - grapes <br>
+majonez (majɔnɛs) - mayonnaise <br>
+keczup (kɛʈ͡ʂup) - ketchup <br>
+sałata (sawata) - lettuce <br>
+cytryna (t͡sɨtrɨna) - lemon <br>
+imbir (ʲimbʲir) - ginger <br>
+miód (mʲut) - honey <br>
+
+</p>
                             </div>
                         </div>
                         <div class="reportButton">
@@ -309,9 +425,10 @@
                 <span class="loader"><span class="loader-inner"></span></span>
             </div>
             <script>
-                $(window).on("load", function () {
+                $(window).on("load", function() {
                     $(".loader-wrapper").fadeOut("slow");
                 });
+
             </script>
         </section>
     </main>
@@ -340,12 +457,9 @@
                 </div>
             </div>
             <div class="footer-sm">
-                <a href="https://www.youtube.com/channel/UCfmBNdamq_Z70lFx-m4wpWA" target="_blank"><img
-                        src="./../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
-                <a href="https://www.instagram.com/sarowebsite/" target="_blank"><img
-                        src="./../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
-                <a href="https://www.facebook.com/SARO-Free-Polish-Lessons-106067287815397" target="_blank"><img
-                        src="./../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
+                <a href="https://www.youtube.com/channel/UCfmBNdamq_Z70lFx-m4wpWA" target="_blank"><img src="./../assets/img/icons/YouTube1.png" alt="YouTube icon"></a>
+                <a href="https://www.instagram.com/sarowebsite/" target="_blank"><img src="./../assets/img/icons/Instagram.png" alt="Instagram icon"></a>
+                <a href="https://www.facebook.com/SARO-Free-Polish-Lessons-106067287815397" target="_blank"><img src="./../assets/img/icons/Facebook.png" alt="Facebook icon"></a>
             </div>
         </footer>
     </div>
