--- a/lessons.html
+++ b/lessons.html
@@ -661,6 +661,139 @@
               <br>
               Wycieczka po Warszawie - a trip around Warsaw</p>
           </div>
+          <button class="lesson lesson--adj">Adjectives</button>
+          <div class="panel">
+            <h2>Adjectives</h2><br>
+            <p>As you could see in the previous lesson about declension, in Polish language nouns change depending on so called cases (pl. przypadki). Adjectives don’t differ in this aspect. There are 7 cases, and the questions we ask to find a right change (odmiana) are unchangeable. <br>
+              Adjective’s function is to describe a noun so it answers questions: what (kind of)?/ which? ( pl. jaki, jaka, jakie?), which (one)? (który, która, które?), whose? (czyj, czyja, czyje?). <br> <br>
+              Here are some examples: <br>
+             <img src="./assets/img/lessons/adjectives/table1.jpg" alt="Polish adjectives" class="myImg image-center__center">
+              <br> <br>
+              Adjective is a changeable part of speech. It changes according to the same rules as a noun - through cases, numbers and genders. To know what ending we should add in the end of an adjective to modify it correctly, we need to know: what is the case, grammatical gender of a noun we are describing and if the noun is in the plural or in the singular. <br><br>
+              Almost all the Polish adjectives change  according to one regular scheme, which is as follows: <br><br>
+              <img src="./assets/img/lessons/adjectives/table2.jpg" alt="Adjectives according to gender" class="myImg image-center__center">
+              <br>
+              <table>
+                <tr>
+                  <td style="color:pink">pink</td>
+                  <td>the basic form of adjective (feminine Nominative)</td>
+                </tr>
+                <tr>
+                  <td style="color:greenyellow">green</td>
+                  <td>(endings with e): <br>
+                    - the second form (with i) in the case of adjectives which ends on: ka (e.g. wielka), ga (e.g. długa), ia (e.g. głupia) in feminine Nominative; <br>
+                    - in other cases: the form without i; <br></td>
+                </tr>
+                <tr>
+                  <td style="color:yellow">yellow</td>
+                  <td>(endings with i / y): <br>
+                    - the second form  (with i) in the case of adjectives which ends on: ka (e.g. wielka), ga (e.g. długa), la (e.g. ośla), ia (e.g. głupia) in feminine Nominative; <br>
+                    - in other cases: the form without i;</td>
+                </tr>
+                <tr>
+                  <td style="color:lightblue">blue</td>
+                  <td>- the second form (with i) in the case of adjectives which ends on ia (e.g. głupia) in feminine Nominative; <br>
+                    - in other cases: the form without i ;</td>
+                </tr>
+                <tr>
+                  <td style="color: red;">red</td>
+                  <td>it is needed to soften the sound which comes directly before by adding i or y; </td>
+                </tr>
+              </table>
+              <br>
+              NOTICE : instead of endings -szy and sometimes -ży ( not -rzy), phonetically softened -si, -zi can appeared. For example: <br> <br>
+ten wyższy – ci wyżsi <br>
+ten głuchy – ci głusi <br>
+ten duży – ci duzi <br>
+<br>
+*but: <br>
+ten boży – ci boży <br>
+ten stary – ci starzy <br>
+ten kurzy – ci kurzy <br>
+<br>
+Here you analyze some softened forms of endings on the example of masculine Nominative in the singular: <br>
+<br>
+<table>
+  <tr><td colspan="2"><i>y</i> becomes  <i>i</i></td>
+  </tr>
+  <tr>
+    <td>by   bi</td>
+    <td>gruby   grubi</td>
+  </tr>
+  <tr><td>my   mi</td>
+  <td></td>
+</tr>
+  <tr>
+    <td>ny   ni</td>
+  <td>kochany   kochani</td></tr>
+  <tr><td>wy   wi</td>
+  <td>szczęśliwy   szczęśliwi</td></tr>
+  <tr><td colspan="2">change of the consonant, <i>y</i> stays</td></tr>
+  <tr><td>ry   rzy</td>
+  <td>ponury   ponurzy</td></tr>
+  <tr><td colspan="2">change of the consonant, <i>y</i> becomes <i>i</i></td></tr>
+  <tr> <td>ł   li</td>
+  <td>wesół   weseli</td></tr>
+  <tr><td>szy   si</td>
+  <td></td></tr>
+  <tr>
+    <td>chy   si</td>
+    <td>cichy   cisi</td>
+  </tr>
+  <tr>
+    <td>ży (sometimes)   zi</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>ty   ci</td>
+    <td>otwarty   otwarci</td>
+  </tr>
+  <tr>
+    <td>sty   ści</td>
+    <td>wyrazisty   wyraziści</td>
+  </tr>
+  <tr><td colspan="2">change of the consonant, <i>i</i> becomes <i>y</i>
+  </td></tr>
+  <tr>
+    <td>ki   cy</td>
+    <td>głęboki   głębocy</td>
+  </tr>
+  <tr>
+    <td>gi   dzy</td>
+    <td>długi   dłudzy</td>
+  </tr>
+  <tr><td colspan="2">with no changes, with i</td></tr>
+  <tr>
+    <td>pi   pi</td>
+    <td>głupi   głupi</td>
+  </tr>
+  <tr>
+    <td>si   si</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>wi   wi</td>
+    <td></td>
+  </tr>
+  <tr> <td colspan="2">with no changes, with <i>y</i>
+  </td></tr>
+  <tr>
+    <td>rzy   rzy</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>ży (sometimes)   ży</td>
+    <td>chyży   chyży</td>
+  </tr>
+</table>
+<br>
+NOTICE : the are some phrases in which an adjective appears <u>after</u> a noun.
+duże państwo, potężne państwo          państwo polskie
+czarny kot, pogodny kot          kot domowy
+wieloletnia wojna, druga wojna          wojna domowa
+
+              </p>
+          </div>
         </div>
         <!--
         <button class="accordion-4">Lesson 1</button>
